--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/material": "^5.11.8",
     "@next/font": "13.1.6",
+    "mongodb": "^5.0.1",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0"
